fixed sizing and alignment

--- a/public/master.css
+++ b/public/master.css
@@ -8,10 +8,11 @@ body{
 
 /*Container to control the overall size of the app*/
 .content{
-  max-width: 80%;
+  max-width: 50%;
   height: 100%;
-  /*margin: auto;*/
-  align-items: center;
+  display: block;
+  margin: 0 auto;
+  /*align-items: center;*/
 }
 
 #menuPage{
@@ -20,12 +21,13 @@ body{
 }
 
 /*The Buttons*/
+/*these are within the content div */
 #recordbox {
     border-radius: 25px;
     background: #fd3a51;
     padding: 20px;
     width: 100%;
-    height: 300px;
+    height: 40%;
     font-family: myTitleFont;
 }
 #recievebox {
@@ -33,7 +35,7 @@ body{
     background: #5e4694;
     padding: 20px;
     width: 100%;
-    height: 300px;
+    height: 40%;
     font-family: myTitleFont;
 }
 
